--- a/style2.css
+++ b/style2.css
@@ -98,3 +98,16 @@ figcaption {
   .tooltip:hover .tooltiptext {
     visibility: visible;
   }
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    padding: 0;
+    display: block;
+    margin: 0 auto;
+    max-height: 100%;
+    max-width: 100%;
+}
