--- a/style2.css
+++ b/style2.css
@@ -1,7 +1,6 @@
 body {
     color: rgb(255, 255, 255);
-    background-image: url(assets/angels.PNG);
-    background-repeat: round;
+    background-color: #000000;
     text-align: center;
     font-family: 'Pirata One';
     font-size: 25px;
@@ -9,7 +8,7 @@ body {
 
 
 h1 {
-    color: rgb(0, 0, 0);
+    color: #ffaf00;
     text-align: center;
     font-family:'UnifrakturMaguntia', cursive;
     font-size: 80px;   
@@ -20,6 +19,12 @@ h2 {
     text-align: center;
     font-family:'Pirata One';
     font-size: 50px;
+}
+h3 {
+  color:#ffaf00;
+  text-align: center;
+  font-family: 'UnifrakturMaguntia', cursive;
+  font-size: 40px;
 }
 
 p {
