--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h3 {
 
 
 p {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 footer {
@@ -129,3 +129,8 @@ abbr {
     text-align: center;
   }
   
+  .candle-text {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
