--- a/style.css
+++ b/style.css
@@ -153,7 +153,21 @@ abbr {
 
   .holy {
     color: #111;
-    background: #ffda7b;
     box-shadow: 0 0 100px #ffda7b;
+    transition: transform 1s; /* Animation */
+    margin: 0 auto;
   }
 
+  .holy:hover {
+    transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
+
+  .holycandle {
+    color: #111;
+    transition: transform 1s; /* Animation */
+    margin: 0 auto;
+  }
+
+  .holycandle:hover {
+    transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
